--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
 	"name": "lahya-server",
-	"version": "0.0.9",
+	"version": "0.0.10",
 	"description": "",
 	"main": "./serv.js",
 	"scripts": {
-		"start": "nodemon ./serv.js"
+		"start": "node ./serv.js"
 	},
 	"author": "",
 	"license": "ISC",
@@ -19,6 +19,5 @@
 		"mysql2": "^2.3.3",
 		"path": "^0.12.7",
 		"url": "^0.11.0"
-	},
-	"type": "module"
+	}
 }
